; ModuleID = '/home/carl/AnghaBench/stb/tests/extr_stretch_test.c_main.c'
source_filename = "/home/carl/AnghaBench/stb/tests/extr_stretch_test.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32* null, i32** %7, align 8
  store i32 0, i32* %6, align 4
  br label %8

8:                                                ; preds = %15, %2
  %9 = load i32, i32* %6, align 4
  %10 = icmp slt i32 %9, 1000000
  br i1 %10, label %11, label %18

11:                                               ; preds = %8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @sb_push(i32* %12, i32 %13)
  br label %15

15:                                               ; preds = %11
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %6, align 4
  br label %8

18:                                               ; preds = %8
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @sb_count(i32* %19)
  %21 = icmp eq i32 %20, 1000000
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  store i32 0, i32* %6, align 4
  br label %24

24:                                               ; preds = %37, %18
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 1000000
  br i1 %26, label %27, label %40

27:                                               ; preds = %24
  %28 = load i32*, i32** %7, align 8
  %29 = load i32, i32* %6, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp eq i32 %32, %33
  %35 = zext i1 %34 to i32
  %36 = call i32 @assert(i32 %35)
  br label %37

37:                                               ; preds = %27
  %38 = load i32, i32* %6, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %6, align 4
  br label %24

40:                                               ; preds = %24
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @sb_free(i32* %41)
  store i32* null, i32** %7, align 8
  store i32 0, i32* %6, align 4
  br label %43

43:                                               ; preds = %49, %40
  %44 = load i32, i32* %6, align 4
  %45 = icmp slt i32 %44, 1000
  br i1 %45, label %46, label %52

46:                                               ; preds = %43
  %47 = load i32*, i32** %7, align 8
  %48 = call i32 @sb_add(i32* %47, i32 1000)
  br label %49

49:                                               ; preds = %46
  %50 = load i32, i32* %6, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %6, align 4
  br label %43

52:                                               ; preds = %43
  %53 = load i32*, i32** %7, align 8
  %54 = call i32 @sb_count(i32* %53)
  %55 = icmp eq i32 %54, 1000000
  %56 = zext i1 %55 to i32
  %57 = call i32 @assert(i32 %56)
  ret i32 0
}

declare dso_local i32 @sb_push(i32*, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @sb_count(i32*) #1

declare dso_local i32 @sb_free(i32*) #1

declare dso_local i32 @sb_add(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
